@@ -23,7 +23,7 @@ extern const char * const PACKAGE_VERSION;
 
 /*-- wrappers --*/
 %include "Types.i"
-%include "Templates.i"
+%include "STL.i"
 %include "Token.i"
 %include "Enum.i"
 %include "AssocVector.i"
