@@ -4,6 +4,10 @@ Todo:
    + write perl-XS interface & utilities
 
 v2.0.6 Mon, 07 Sep 2009 16:18:54 +0200
+	+ changed signature mootHMM::wordp(tokstr,tagstr)
+	  - WAS: mootHMM::wordp(const mootTokString  tokstr, const mootTagString  tagstr)
+	  -  IS: mootHMM::wordp(const mootTokString &tokstr, const mootTagString &tagstr)
+	+ ditto for mootHMM::classp(lclass,tagstr)
 	+ added /{newline} suffix check in mootNgramsLexer
 	  - otherwise all-numeric "tags" are interpreted as COUNTs, breaking mootHMM::compile()
 	+ added mootEnum::get_id()
